--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost/bankapi
 spring.datasource.username=postgres
-spring.datasource.password=newuser
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
-
-
+spring.jpa.show-sql=true
+#spring.datasource.schema= classpath*:dataInsert/datainsert.sql
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
