main functionality, bug fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost/bankapi
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
+
+#spring.jpa.show-sql=true
 #spring.datasource.schema= classpath*:dataInsert/datainsert.sql
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
